--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,10 +25,22 @@
         <location>/WEB-INF/403.jsp</location>
     </error-page>
     <error-page>
+        <error-code>
+            400
+        </error-code>
+        <location>/WEB-INF/400.jsp</location>
+    </error-page>
+    <error-page>
         <exception-type>
             com.epam.finalproject.framework.security.AccessDeniedException
         </exception-type>
         <location>/WEB-INF/403.jsp</location>
+    </error-page>
+    <error-page>
+        <exception-type>
+            com.epam.finalproject.framework.web.HandlerArgumentValidationException
+        </exception-type>
+        <location>/WEB-INF/400.jsp</location>
     </error-page>
     <error-page>
         <location>/WEB-INF/error.jsp</location>
