change(project) add app url property
Add property to use in mail called app url with value our app url with context without end /

--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -6,3 +6,5 @@ mail.smtp.port = 587
 
 mail.smtp.auth.username = your mail
 mail.smtp.auth.password = your password
+
+mail.appUrl = your app url include context without / in end
